--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
       <p class="copyright">&copy; Apollo 2016</p>
     </section>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="assets/js/min/functions-min.js"></script>
   </body>
 </html>
