--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
       </div>
       <p class="copyright">&copy; Apollo 2016</p>
     </section>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
     <script src="assets/js/functions-min.js"></script>
   </body>
 </html>
